Eliminate Concatenate and Slice: use VectorElement from beast3
Replace the Concatenate+Slice pattern with single RealVectorParam +
VectorElement for element access. This is a cleaner design: create the
whole vector, then slice to get parts (instead of building parts and
joining them).

Changes:
- Add VectorSlice for multi-element range slicing (array[0:5])
- Add WeightedDirichletValueToBEAST (RealVectorParam + delta exchange)
- Move SliceDoubleArrayToBEAST from feast to core
- Replace all Slice usage with VectorElement in BEASTContext
- Replace ScalarSlice with VectorElement in ExpMarkovChainToBEAST
- Use spec DeltaExchangeOperator instead of deprecated Bactrian version
- Simplify FeastValueHandler (remove Concatenate methods)
- Delete: ScalarSlice, SliceFactory, feast DoubleArrayValueToBEAST
- Delete lphybeast/lib/ (25 unused system-scope JARs)
- Update BEAST3-MIGRATION.md Phase 2/3 status

Depends on beast3 VectorElement (CompEvol/beast3#61).