@@ -3,8 +3,6 @@ package feast.lphybeast.spi;
 import beast.base.evolution.datatype.DataType;
 import feast.lphybeast.tobeast.generators.ExpressionNodeToBEAST;
 import feast.lphybeast.tobeast.generators.ExpressionNodeWrapperToFEAST;
-import feast.lphybeast.tobeast.generators.SliceDoubleArrayToBEAST;
-import feast.lphybeast.tobeast.values.DoubleArrayValueToBEAST;
 import jebl.evolution.sequences.SequenceType;
 import lphy.core.model.Generator;
 import lphybeast.GeneratorToBEAST;
@@ -20,15 +18,14 @@ public class FeastLBImpl implements LPhyBEASTMapping {
 
     @Override
     public List<Class<? extends ValueToBEAST>> getValuesToBEASTs() {
-        return List.of(DoubleArrayValueToBEAST.class);
+        return Collections.emptyList();
     }
 
     @Override
     public List<Class<? extends GeneratorToBEAST>> getGeneratorToBEASTs() {
         return Arrays.asList(
                 ExpressionNodeToBEAST.class,
-                ExpressionNodeWrapperToFEAST.class,
-                SliceDoubleArrayToBEAST.class
+                ExpressionNodeWrapperToFEAST.class
         );
     }
 
